update secret
